--- a/Pandas tutorial - part 1.ipynb
+++ b/Pandas tutorial - part 1.ipynb
@@ -7,7 +7,18 @@
    },
    "source": [
     "# Table of Contents\n",
-    " <p><div class=\"lev1 toc-item\"><a href=\"#Example\" data-toc-modified-id=\"Example-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Example</a></div><div class=\"lev1 toc-item\"><a href=\"#Data-structures\" data-toc-modified-id=\"Data-structures-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Data structures</a></div><div class=\"lev2 toc-item\"><a href=\"#Series\" data-toc-modified-id=\"Series-21\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Series</a></div><div class=\"lev3 toc-item\"><a href=\"#Attributes-of-a-Series:-index-and-values\" data-toc-modified-id=\"Attributes-of-a-Series:-index-and-values-211\"><span class=\"toc-item-num\">2.1.1&nbsp;&nbsp;</span>Attributes of a Series: <code>index</code> and <code>values</code></a></div><div class=\"lev2 toc-item\"><a href=\"#DataFrames:-Multi-dimensional-Data\" data-toc-modified-id=\"DataFrames:-Multi-dimensional-Data-22\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>DataFrames: Multi-dimensional Data</a></div><div class=\"lev3 toc-item\"><a href=\"#Attributes-of-the-DataFrame\" data-toc-modified-id=\"Attributes-of-the-DataFrame-221\"><span class=\"toc-item-num\">2.2.1&nbsp;&nbsp;</span>Attributes of the DataFrame</a></div><div class=\"lev1 toc-item\"><a href=\"#Basic-operations-on-Series/Dataframes\" data-toc-modified-id=\"Basic-operations-on-Series/Dataframes-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Basic operations on Series/Dataframes</a></div><div class=\"lev3 toc-item\"><a href=\"#Elementwise-operations-(like-numpy)\" data-toc-modified-id=\"Elementwise-operations-(like-numpy)-301\"><span class=\"toc-item-num\">3.0.1&nbsp;&nbsp;</span>Elementwise-operations (like numpy)</a></div><div class=\"lev3 toc-item\"><a href=\"#Alignment!-(unlike-numpy)\" data-toc-modified-id=\"Alignment!-(unlike-numpy)-302\"><span class=\"toc-item-num\">3.0.2&nbsp;&nbsp;</span>Alignment! (unlike numpy)</a></div><div class=\"lev3 toc-item\"><a href=\"#Reductions-(like-numpy)\" data-toc-modified-id=\"Reductions-(like-numpy)-303\"><span class=\"toc-item-num\">3.0.3&nbsp;&nbsp;</span>Reductions (like numpy)</a></div><div class=\"lev3 toc-item\"><a href=\"#Some-other-useful-methods\" data-toc-modified-id=\"Some-other-useful-methods-304\"><span class=\"toc-item-num\">3.0.4&nbsp;&nbsp;</span>Some other useful methods</a></div><div class=\"lev2 toc-item\"><a href=\"#Importing-and-exporting-data\" data-toc-modified-id=\"Importing-and-exporting-data-31\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>Importing and exporting data</a></div><div class=\"lev2 toc-item\"><a href=\"#Acknowledgement\" data-toc-modified-id=\"Acknowledgement-32\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>Acknowledgement</a></div>"
+    " <p><div class=\"lev1 toc-item\"><a href=\"#Introduction\" data-toc-modified-id=\"Introduction-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Introduction</a></div><div class=\"lev1 toc-item\"><a href=\"#Example\" data-toc-modified-id=\"Example-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Example</a></div><div class=\"lev1 toc-item\"><a href=\"#Data-structures\" data-toc-modified-id=\"Data-structures-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Data structures</a></div><div class=\"lev2 toc-item\"><a href=\"#Series\" data-toc-modified-id=\"Series-31\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>Series</a></div><div class=\"lev3 toc-item\"><a href=\"#Attributes-of-a-Series:-index-and-values\" data-toc-modified-id=\"Attributes-of-a-Series:-index-and-values-311\"><span class=\"toc-item-num\">3.1.1&nbsp;&nbsp;</span>Attributes of a Series: <code>index</code> and <code>values</code></a></div><div class=\"lev2 toc-item\"><a href=\"#DataFrames:-Multi-dimensional-Data\" data-toc-modified-id=\"DataFrames:-Multi-dimensional-Data-32\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>DataFrames: Multi-dimensional Data</a></div><div class=\"lev3 toc-item\"><a href=\"#Attributes-of-the-DataFrame\" data-toc-modified-id=\"Attributes-of-the-DataFrame-321\"><span class=\"toc-item-num\">3.2.1&nbsp;&nbsp;</span>Attributes of the DataFrame</a></div><div class=\"lev1 toc-item\"><a href=\"#Basic-operations-on-Series/Dataframes\" data-toc-modified-id=\"Basic-operations-on-Series/Dataframes-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Basic operations on Series/Dataframes</a></div><div class=\"lev3 toc-item\"><a href=\"#Elementwise-operations-(like-numpy)\" data-toc-modified-id=\"Elementwise-operations-(like-numpy)-401\"><span class=\"toc-item-num\">4.0.1&nbsp;&nbsp;</span>Elementwise-operations (like numpy)</a></div><div class=\"lev3 toc-item\"><a href=\"#Alignment!-(unlike-numpy)\" data-toc-modified-id=\"Alignment!-(unlike-numpy)-402\"><span class=\"toc-item-num\">4.0.2&nbsp;&nbsp;</span>Alignment! (unlike numpy)</a></div><div class=\"lev3 toc-item\"><a href=\"#Reductions-(like-numpy)\" data-toc-modified-id=\"Reductions-(like-numpy)-403\"><span class=\"toc-item-num\">4.0.3&nbsp;&nbsp;</span>Reductions (like numpy)</a></div><div class=\"lev3 toc-item\"><a href=\"#Some-other-useful-methods\" data-toc-modified-id=\"Some-other-useful-methods-404\"><span class=\"toc-item-num\">4.0.4&nbsp;&nbsp;</span>Some other useful methods</a></div><div class=\"lev2 toc-item\"><a href=\"#Importing-and-exporting-data\" data-toc-modified-id=\"Importing-and-exporting-data-41\"><span class=\"toc-item-num\">4.1&nbsp;&nbsp;</span>Importing and exporting data</a></div><div class=\"lev2 toc-item\"><a href=\"#Acknowledgement\" data-toc-modified-id=\"Acknowledgement-42\"><span class=\"toc-item-num\">4.2&nbsp;&nbsp;</span>Acknowledgement</a></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# Introduction\n",
+    "* Jupyter notebook (document and framework)\n",
+    "* Run user interface tour\n",
+    "* Test import and clear output"
    ]
   },
   {
@@ -28,12 +39,21 @@
     "code_folding": [],
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Populating the interactive namespace from numpy and matplotlib\n"
+     ]
+    }
+   ],
    "source": [
-    "%matplotlib inline\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn # see http://seaborn.pydata.org/tutorial.html"
+    "%pylab inline\n",
+    "try:\n",
+    "    import seaborn # see http://seaborn.pydata.org/tutorial.html\n",
+    "except ImportError:\n",
+    "    pass"
    ]
   },
   {
@@ -51,7 +71,8 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"data/titanic.csv\")"
+    "df = pd.read_csv(\"data/titanic.csv\") # or https://raw.githubusercontent.com/AlessandroChecco/pandas-tutorial-solved/master/data/airbase_data.csv\n",
+    "# or df = pd.read_csv('http://pastebin.com/raw/H67fnXSM')"
    ]
   },
   {
@@ -1074,8 +1095,6 @@
    },
    "outputs": [],
    "source": [
-    "# redefining the example objects\n",
-    "\n",
     "population = pd.Series({'Germany': 81.3, 'Belgium': 11.3, 'France': 64.3, \n",
     "                        'United Kingdom': 64.9, 'Netherlands': 16.9})\n",
     "\n",
@@ -1744,6 +1763,13 @@
    "sideBar": true,
    "threshold": 4,
    "toc_cell": true,
+   "toc_position": {
+    "height": "685px",
+    "left": "0px",
+    "right": "1228px",
+    "top": "107px",
+    "width": "212px"
+   },
    "toc_section_display": "block",
    "toc_window_display": true
   }
