--- a/Pandas tutorial - part 3.ipynb
+++ b/Pandas tutorial - part 3.ipynb
@@ -9,20 +9,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Populating the interactive namespace from numpy and matplotlib\n"
+     ]
+    }
+   ],
    "source": [
-    "%matplotlib inline\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn\n",
+    "%pylab inline\n",
+    "try:\n",
+    "    import seaborn\n",
+    "except ImportError:\n",
+    "    pass\n",
     "pd.options.display.max_rows = 8"
    ]
   },
@@ -96,13 +105,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>BETR801</th>\n",
+       "      <th>BETN029</th>\n",
+       "      <th>FR04037</th>\n",
+       "      <th>FR04012</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1998-01-01 00:00:00</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1998-01-01 01:00:00</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1998-01-01 02:00:00</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1998-01-01 03:00:00</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-12-31 20:00:00</th>\n",
+       "      <td>16.5</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>47.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-12-31 21:00:00</th>\n",
+       "      <td>14.5</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>43.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-12-31 22:00:00</th>\n",
+       "      <td>16.5</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>42.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-12-31 23:00:00</th>\n",
+       "      <td>15.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>49.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>131265 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     BETR801  BETN029  FR04037  FR04012\n",
+       "1998-01-01 00:00:00      NaN     16.0      NaN      NaN\n",
+       "1998-01-01 01:00:00      NaN     13.0      NaN      NaN\n",
+       "1998-01-01 02:00:00      NaN     12.0      NaN      NaN\n",
+       "1998-01-01 03:00:00      NaN     12.0      NaN      NaN\n",
+       "...                      ...      ...      ...      ...\n",
+       "2012-12-31 20:00:00     16.5      2.0     16.0     47.0\n",
+       "2012-12-31 21:00:00     14.5      2.5     13.0     43.0\n",
+       "2012-12-31 22:00:00     16.5      3.5     14.0     42.0\n",
+       "2012-12-31 23:00:00     15.0      3.0     13.0     49.0\n",
+       "\n",
+       "[131265 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "data = pd.read_csv('data/airbase_data.csv', index_col=0, parse_dates=True, na_values=[-9999])"
+    "data = pd.read_csv('data/airbase_data.csv', index_col=0, parse_dates=True, na_values=[-9999])\n",
+    "# or https://github.com/AlessandroChecco/pandas-tutorial/blob/master/data/airbase_data.csv?raw=true"
    ]
   },
   {
