--- a/Introduction.ipynb
+++ b/Introduction.ipynb
@@ -75,6 +75,68 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "hide_input": true
+   },
+   "outputs": [],
+   "source": [
+    "b = \"hello\"\n",
+    "help(\"hello\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "hide_input": true,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "print(dir(\"help\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "hide_input": true
+   },
+   "outputs": [],
+   "source": [
+    "help(str.__add__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "hide_input": true
+   },
+   "outputs": [],
+   "source": [
+    "\"hello\".__add__(\"hello\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "hide_input": true
+   },
+   "outputs": [],
+   "source": [
+    "\"hello\"+\"hello\" #or \"hello\"*2"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -175,6 +237,20 @@
     "<div class=\"alert alert-success\">\n",
     "    <b>EXERCISE</b>: write a function that capitalise the word inserted (hint, use dir on str) and add a period at the end of the word.\n",
     "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "hide_input": true
+   },
+   "outputs": [],
+   "source": [
+    "def cap(word):\n",
+    "    return word.capitalize()+'.'\n",
+    "cap('hello')"
    ]
   },
   {
@@ -308,6 +384,23 @@
     "<div class=\"alert alert-success\">\n",
     "    <b>EXERCISE</b>: write a function that takes a list on ints as input and prints only the odds values (hint, look mod2 function x%2 or int.__mod__(x,2) )\n",
     "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "hide_input": true
+   },
+   "outputs": [],
+   "source": [
+    "def print_odds(l):\n",
+    "    for i in l:\n",
+    "        if i%2 == 0:\n",
+    "            print(i)\n",
+    "print_odds([3,4,5,6,])\n",
+    "        "
    ]
   }
  ],
