--- a/A - Data Structures.ipynb
+++ b/A - Data Structures.ipynb
@@ -651,7 +651,7 @@
     }
    },
    "source": [
-    "To check if 'Fire' and 'Rajath' is present in the list names. A conventional approach would be to use a for loop and iterate over the list and use the if condition. But in python you can use 'a in b' concept which would return 'True' if a is present in b and 'False' if not."
+    "To check if 'Fire' and 'Alex' is present in the list names. A conventional approach would be to use a for loop and iterate over the list and use the if condition. But in python you can use 'a in b' concept which would return 'True' if a is present in b and 'False' if not."
    ]
   },
   {
@@ -701,7 +701,7 @@
     }
    ],
    "source": [
-    "'Rajath' in names"
+    "'Alex' in names"
    ]
   },
   {
@@ -1203,7 +1203,7 @@
     }
    },
    "source": [
-    "Index value can be specified to pop a ceratin element corresponding to that index value."
+    "Index value can be specified to pop a certain element corresponding to that index value."
    ]
   },
   {
@@ -1693,6 +1693,15 @@
    ],
    "source": [
     "print (listb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-success\">\n",
+    "    <b>EXERCISE</b>: Create a list containining strings, then append an other list to it and then remove the first element of the resulting list using del. Finally, remove the second element of the corresponding list using remove.\n",
+    "</div>"
    ]
   },
   {
