--- a/B - Text Operations.ipynb
+++ b/B - Text Operations.ipynb
@@ -388,11 +388,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "print (String0.endswith('y'))"
    ]
@@ -406,11 +414,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "print (String0.endswith('l',0))\n",
     "print (String0.endswith('M',0,5))"
@@ -425,11 +442,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "print (String0.count('a',0))\n",
     "print (String0.count('a',5,10))"
@@ -446,20 +472,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1,2,3,4'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "'a'.join('*_-')"
+    "','.join('1234')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "'*_-' is the input string and char 'a' is added in between each element"
+    "'1234' is the input string and char ',' is added in between each element"
    ]
   },
   {
@@ -471,11 +508,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['T', 'a', 'j', ' ', 'M', 'a', 'h', 'a', 'l', ' ', 'i', 's', ' ', 'b', 'e', 'a', 'u', 't', 'i', 'f', 'u', 'l']\n",
+      "Taj Mahal is beautiful\n"
+     ]
+    }
+   ],
    "source": [
     "a = list(String0)\n",
     "print (a)\n",
@@ -492,11 +538,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " /i/s/ /b/e/a/u/t/i/f/u/l\n"
+     ]
+    }
+   ],
    "source": [
     "c = '/'.join(a)[18:]\n",
     "print (c)"
@@ -513,11 +567,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[' ', 'i', 's', ' ', 'b', 'e', 'a', 'u', 't', 'i', 'f', 'u', 'l']\n"
+     ]
+    }
+   ],
    "source": [
     "d = c.split('/')\n",
     "print (d)"
@@ -532,11 +594,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[' ', 'i', 's', ' /b/e/a/u/t/i/f/u/l']\n",
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "e = c.split('/',3)\n",
     "print (e)\n",
@@ -552,11 +623,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Taj Mahal is beautiful\n",
+      "taj mahal is beautiful\n"
+     ]
+    }
+   ],
    "source": [
     "print (String0)\n",
     "print (String0.lower())"
@@ -571,11 +651,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'TAJ MAHAL IS BEAUTIFUL'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "String0.upper()"
    ]
@@ -589,13 +680,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Sheffield is beautiful'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "String0.replace('Taj Mahal','Bengaluru')"
+    "String0.replace('Taj Mahal','Sheffield')"
    ]
   },
   {
@@ -607,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -625,11 +727,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hello'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "f.strip()"
    ]
@@ -643,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -654,11 +767,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'   ***----hello---*******     '"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "f.strip('*')"
    ]
@@ -672,11 +796,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----hello---\n",
+      "hello\n"
+     ]
+    }
+   ],
    "source": [
     "print (f.strip(' *'))\n",
     "print (f.strip(' *-'))"
@@ -693,14 +826,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----hello---*******     \n",
+      "   ***----hello---\n"
+     ]
+    }
+   ],
    "source": [
     "print (f.lstrip(' *'))\n",
     "print (f.rstrip(' *'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-success\">\n",
+    "    <b>EXERCISE</b>: Create a list of strings, join them using a comma as separator, and replace a part of the string using replace\n",
+    "</div>"
    ]
   },
   {
@@ -730,11 +881,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'> <class 'dict'>\n"
+     ]
+    }
+   ],
    "source": [
     "d0 = {}\n",
     "d1 = dict()\n",
@@ -750,11 +909,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'One': 1, 'OneTwo': 12}\n"
+     ]
+    }
+   ],
    "source": [
     "d0['One'] = 1\n",
     "d0['OneTwo'] = 12 \n",
@@ -770,11 +937,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "print (d0['One'])"
    ]
@@ -788,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -807,11 +982,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<zip object at 0x106b1c3c8>\n"
+     ]
+    }
+   ],
    "source": [
     "d2 = zip(names,numbers)\n",
     "print (d2)"
@@ -830,11 +1013,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n"
+     ]
+    }
+   ],
    "source": [
     "a1 = dict(d2)\n",
     "print (a1)"
@@ -860,11 +1051,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n"
+     ]
+    }
+   ],
    "source": [
     "a1.clear()\n",
     "print (a1)"
@@ -879,11 +1078,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Three': 3, 'Two': 2, 'One': 1, 'Five': 5, 'Four': 4}\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(len(names)):\n",
     "    a1[names[i]] = numbers[i]\n",
@@ -899,11 +1106,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_values([3, 2, 1, 5, 4])"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a1.values()"
    ]
@@ -917,11 +1135,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['Three', 'Two', 'One', 'Five', 'Four'])"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a1.keys()"
    ]
@@ -935,11 +1164,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_items([('Three', 3), ('Two', 2), ('One', 1), ('Five', 5), ('Four', 4)])"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a1.items()"
    ]
@@ -953,15 +1193,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Three': 3, 'Two': 2, 'One': 1, 'Five': 5}\n",
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "a2 = a1.pop('Four')\n",
     "print (a1)\n",
     "print (a2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-success\">\n",
+    "    <b>EXERCISE</b>: Create a dictionary of countries with corresponding population size (invented), starting from two lists and using zip, then remove the first country and assign it to a new variable\n",
+    "</div>"
    ]
   }
  ],
