--- a/C - Control Flow.ipynb
+++ b/C - Control Flow.ipynb
@@ -489,6 +489,15 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-success\">\n",
+    "    <b>EXERCISE</b>: Create a list with ten values, then loop on it to print the values that are smaller than 3, and use break to interrupt the loop if a value equal to 10 appears\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
