--- a/D - Functions.ipynb
+++ b/D - Functions.ipynb
@@ -190,7 +190,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please enter your name : Alex\n"
+      "Please enter your name : hello\n"
      ]
     }
    ],
@@ -223,8 +223,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hey Alex!\n",
-      "Alex, How do you do?\n"
+      "Hey hello!\n",
+      "hello, How do you do?\n"
      ]
     }
    ],
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -931,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -954,14 +954,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is happening before the function is called :  [1, 2, 3, 4, 5]\n",
+      "This is happening inside the function : [1, 2, 3, 4, 5, 6]\n",
+      "This is happening outside the function : [1, 2, 3, 4, 5]\n",
+      "Accessing a variable declared inside the function from outside : [1, 2, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
    "source": [
     "egfunc1()"
    ]
@@ -990,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -1004,14 +1015,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "64"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "z(8)"
    ]
@@ -1040,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -1054,14 +1076,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 4, 5, 6, 7, 8, 9, 10, 11]\n"
+     ]
+    }
+   ],
    "source": [
     "eg = map(lambda x:x+2, list1)\n",
     "print (list(eg))"
@@ -1080,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -1094,14 +1124,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 10, 10, 10, 10, 10, 10, 10, 10]\n"
+     ]
+    }
+   ],
    "source": [
     "eg2 = map(lambda x,y:x+y, list1,list2)\n",
     "print (list(eg2))"
@@ -1121,14 +1159,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
     "eg3 = map(str,eg2)\n",
     "print (list(eg3))"
@@ -1158,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -1183,14 +1229,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list(filter(lambda x:x<5,list1))"
    ]
@@ -1208,14 +1265,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[True, True, True, True, False, False, False, False, False]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list(map(lambda x:x<5, list1))"
    ]
@@ -1233,16 +1301,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 8]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list(filter(lambda x:x%4==0,list1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-success\">\n",
+    "    <b>EXERCISE</b>: Create a function that takes a string and add \"hello\" to it separated by a comma, the function should also return the length of the string (use a tuple). Then use map to apply this function to a list of strings.\n",
+    "</div>"
    ]
   }
  ],
